made api doc changes
